--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -65,6 +65,8 @@
 
 <p><strong>What will you learn:</strong> </p>
   <p>Through  workshops, lab hours, artists’ show and tell,  and collaborative design and making, you will learn to integrate electronics and technology simply into fabric and paper, and  to rapidly design, customize, and construct exciting physical artifacts and costumes using geometric computation and digital fabrication.   Experience PSU’s School of Art and Design’s wonderful labs and learn 3dprining , laser cutting, and sewing.  Taught by incredibly talented artists.</p>
+
+  <p>To learn more and sign up, email: <a href="mailto:hello@ceti.institute?subject=enchantedtech">hello@ceti.institute</a>
           
         </div>
       </section>
