--- a/programs/enchantedtech/index.html
+++ b/programs/enchantedtech/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="refresh" content="0;URL='/programs/enchantedtech'" />  
+	<meta http-equiv="refresh" content="0;URL='/programs/enchanted-tech'" />  
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ceti | Enchanted Tech</title>
