--- a/programs/enchantedtech/index.html
+++ b/programs/enchantedtech/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="refresh" content="0;URL='/programs/enchanted-tech'" />  
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ceti | Enchanted Tech</title>
+	<title>Ceti | Enchanted Technology</title>
 </head>
 <body>
 	
