also added enchanted tech to nav on homepage

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</h1>
 				<nav role="navigation" class="navtwo" id="topnavlist">
 					<ul>
-					<li><a href="#">Projects</a>
+					<li><a href="#">Programs</a>
 						<ul>
+							<li><a href="/programs/enchanted-tech">Enchanted Tech</a></li>
 							<li><a href="/gallery-of-the-future/">Gallery of the Future</a></li>
 							<li><a href="/device-sharing">Device Sharing</a></li>
 							<li><a href="/wlf2020">Winter Light Fesrtival</a></li>
@@ -43,8 +44,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="hamburger"></div>
 				</div>
 				<div class="menu-mobile">
-				<strong><a href="#">Projects</a></strong>
-					<a href="/gallery-of-the-future/">Gallery of the Future</a>
+				<strong><a href="#">Programs</a></strong>
+					<a href="/programs/enchanted-tech">Enchanted Tech</a><a href="/gallery-of-the-future/">Gallery of the Future</a>
 					<a href="/device-sharing">Device Sharing</a>
 					<a href="/wlf2020">Winter Light Fesrtival</a>
 					<strong><a href="/newsletter">Newsletter Signup</a></strong>
