fixed dates of enchanted tech

--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -54,14 +54,14 @@
 
 <p><strong>Who:</strong> For students (grades 8 - 25), educators,  artists  and anybody who wants to learn to play with materials and electronics to create magical things with craft and technology.  Come learn/experiment with an amazing talented and creative community of artists and technologists.  You can drop-in and engage as much as you wish.</p>
 
-<p><strong>When:</strong> July 22 --- August 25</p>
+<p><strong>When:</strong> July 28 --- August 6</p>
 
 <p><strong>What:</strong></p>
 <p>Workshops and Lab Sessions</p>
 
-<p>Enchanted Tech Festival + Show (participants, families, and Community) August 25 3 - 7pm</p>
+<p>Enchanted Tech Festival + Show (participants, families, and Community) TBD</p>
 
-<p><strong>Where:</strong>  At the new CETI lab at PSU.  In FMH 2… (1 block form the max and bus mall).
+<p><strong>Where:</strong>  At the new CETI lab at PSU and virtually via streaming and asynchronous work.  In FMH Room 218 (1 block form the max and bus mall).
 
 <p><strong>What will you learn:</strong> </p>
   <p>Through  workshops, lab hours, artists’ show and tell,  and collaborative design and making, you will learn to integrate electronics and technology simply into fabric and paper, and  to rapidly design, customize, and construct exciting physical artifacts and costumes using geometric computation and digital fabrication.   Experience PSU’s School of Art and Design’s wonderful labs and learn 3dprining , laser cutting, and sewing.  Taught by incredibly talented artists.</p>
