added caps to headers

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
       <section id="intro">
         <figure><img src="/images/heros/wlf-ceti-blue-green.png" alt="About" /></figure>
         <div class="inner">
-          <h1>Mission and History</h1>
+          <h1 class="caps">Mission and History</h1>
 
           <p>CETI is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. CETI emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse community of professionals, educators, researchers, students, artists, technologists, activists, and community organizers.</p>
 
@@ -48,7 +48,7 @@
         <article class="orange-light">
           <figure><img src="/images/heros/wlf-eleven.png" alt="About" /></figure>
           <div class="inner">
-            <h2>Join/Support</h2>
+            <h2 class="caps">Join/Support</h2>
             <p>To partner with us and to learn more about or propose collaborations or projects, email us at hello@ceti.institute. We will be happy to set up a conversation and talk.</p>
             <p><a href="mailto:hello@ceti.institute" class="button">Email us</a> &nbsp; <a href="/newsletter" class="button">Newsletter Signup</a></p>
             <!-- <h3>Donate</h3>
