--- a/programs/index.html
+++ b/programs/index.html
@@ -29,7 +29,7 @@
       <section id="intro">
         <figure><img src="/images/heros/wlf-filmreel.png" alt="large image of a 8 milimeter film camera with colorful lights in the film rolls" /></figure>
         <div class="inner">
-          <h1>Programs at Ceti</h1>
+          <h1 class="caps">Programs</h1>
 
           <p>An ongoing list of CETI’s recent, current, and potential future programs and projects. We think of projects as drafts, that may or may not be revisited in the future depending on community inclination and need. Our projects emphasize interdisciplinary creative experimentation and participatory research around emergent technology and social impact. They are intended to spark critical discourse bridging art, technology, and social/systemic change, revealing, subverting, and reimagining the implications and possibilities of these emergent technologies.</p>
 
