--- a/community/index.html
+++ b/community/index.html
@@ -144,7 +144,7 @@
               <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.jpg" />Abby Chroman</a>
             </div>
             <div class="card">
-              <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpg" />Jesse England</a>
+              <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
             </div>
           </article>
         </div>
