image name issue resolved

--- a/community/jesse_england/index.html
+++ b/community/jesse_england/index.html
@@ -28,7 +28,7 @@
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/jesse_england.jpg" alt="Jesse England" /></div>
+          <div class="biopic"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" /></div>
         </div>
         <article class="inner">
           <h1>Jesse England</h1>
