sharon jones fix

--- a/community/sharon_jones/index.html
+++ b/community/sharon_jones/index.html
@@ -33,7 +33,7 @@
         <article class="inner">
           <h1>Sharon Jones</h1>
           <h2>Executive Council</h2>
-          <p>"Dr. Sharon A. Jones is a professor of engineering at the University of Washington Bothell where she also serves as the Vice Chancellor for Academic Affairs. Dr. Jones holds a B.S. in civil engineering from Columbia University, an M.E. in civil engineering from University of Florida, an M.P.A. in public works policy from California State University Long Beach, and a Ph.D. from Carnegie Mellon University in engineering and public policy.</p>
+          <p>Dr. Sharon A. Jones is a professor of engineering at the University of Washington Bothell where she also serves as the Vice Chancellor for Academic Affairs. Dr. Jones holds a B.S. in civil engineering from Columbia University, an M.E. in civil engineering from University of Florida, an M.P.A. in public works policy from California State University Long Beach, and a Ph.D. from Carnegie Mellon University in engineering and public policy.</p>
 
           <p>She served as tenured faculty at Rose-Hulman Institute of Technology and Lafayette College before becoming the Dean of the Shiley School of Engineering at University of Portland between 2011 and 2019. She joined University of Washington Bothell in 2019.</p>
 
