added smaller images and added sponsors

--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | About</title>
+    <title>CETI | Enchanted Tech | E-Textiles Festival</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
 
     <meta property="og:title" content="Ceti Institute" />
-    <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:description" content="Join CETI's Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="/images/promo/enchanted-tech/enchantedtech-postcard-EN5x7.png" />
     <meta property="og:site_name" content="CETI Institute" />
     <meta name="twitter:image:alt" content="CETI Institute" />
     <meta name="twitter:site" content="@ceti_institute" />
