--- a/community/index.html
+++ b/community/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
     <meta property="og:title" content="Ceti Institute" />
-    <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:description" content="CETI Institute's community brings together scientists, artists, educators, and researchers to tackle social and environmental issues using cresative technologies. We are proudly sponsored by the Collins Foundation, the PGE Foundation, PSU's School or Art + Design, the Mt. Hood Regulatory Committee and Open Signal PDX." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="/images/promo/enchanted-tech/enchantedtech-postcard-EN5x7.png" />
     <meta property="og:site_name" content="CETI Institute" />
     <meta name="twitter:image:alt" content="CETI Institute" />
     <meta name="twitter:site" content="@ceti_institute" />
@@ -144,7 +144,24 @@
               <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.jpg" />Abby Chroman</a>
             </div>
             <div class="card">
-              <a href="/community/jesse_england/index.html"><br /><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
+              <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
+            </div>
+          </article>
+          <article class="gallery sponsors">
+            <div class="card">
+              <a href="https://www.collinsfoundation.org/" target="_blank"><img src="/images/logos/logo_collinsfound.png" alt="Collins Foundation" /></a>
+            </div>
+            <div class="card">
+              <a href="https://www.portlandoregon.gov/oct/57448" target="_blank"><img src="/images/logos/logo_mthoodreg.png" alt="Mt. Hood Regulatory Commission" /></a>
+            </div>
+            <div class="card">
+              <a href="https://www.pgefoundation.org/" target="_blank"><img src="/images/logos/logo_pge_found.png" alt="PGE Foundation" /></a>
+            </div>
+            <div class="card">
+              <a href="https://www.pdx.edu/art-design/" target="_blank"><img src="/images/logos/logo_psu-sad.png" alt="Portland School of Art + Design" /></a>
+            </div>
+            <div class="card">
+              <a href="https://www.opensignalpdx.org/" target="_blank"><img src="/images/logos/logo_opensignal.png" alt="Open Signal" /></a>
             </div>
           </article>
         </div>
@@ -155,7 +172,6 @@
         <a href="https://www.facebook.com/CETI.Institute/" target="_blank"><img src="/images/icons/facebook.png" /></a>
         <a href="https://www.instagram.com/ceti.institute/" target="_blank"><img src="/images/icons/instagram1.png" /></a>
         <a href="https://twitter.com/ceti_institute" target="_blank"><img src="/images/icons/twitter1.png" /></a>
-        <a href="https://www.youtube.com/c/CetiInstitute" target="_blank"><img src="/images/icons/youtube.png" /></a>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
