added scott and added alt tags

--- a/community/index.html
+++ b/community/index.html
@@ -35,19 +35,19 @@
               <a href="/community/nandini_ranganathan/index.html"><img src="/images/people/nandini_ranganathan.jpg" alt="headshot of Nandini Ranganathan" />Nandini Ranganathan</a>
             </div>
             <div class="card">
-              <a href="/community/hanson_hosein/index.html"><img src="/images/people/hanson_hosein.png" />Hanson Hosein</a>
+              <a href="/community/hanson_hosein/index.html"><img src="/images/people/hanson_hosein.png" alt="Hanson Hosein" />Hanson Hosein</a>
             </div>
             <div class="card">
-              <a href="/community/shankar_narayan/index.html"><img src="/images/people/shankar_narayan.png" />Shankar Narayan</a>
+              <a href="/community/shankar_narayan/index.html"><img src="/images/people/shankar_narayan.png" alt="Shankar Narayan" />Shankar Narayan</a>
             </div>
             <div class="card">
-              <a href="/community/vinay_narayan/index.html"><img src="/images/people/person-generic-white.png" />Vinay Narayan</a>
+              <a href="/community/vinay_narayan/index.html"><img src="/images/people/person-generic-white.png" alt="Vinay Narayan" />Vinay Narayan</a>
             </div>
             <div class="card">
-              <a href="/community/noelle_silver/index.html"><img src="/images/people/noelle_silver.png" />Noelle Silver</a>
+              <a href="/community/noelle_silver/index.html"><img src="/images/people/noelle_silver.png" alt="Noelle Silver" />Noelle Silver</a>
             </div>
             <div class="card">
-              <a href="/community/matthew_timberlake/index.html"><img src="/images/people/matthew_timberlake.jpg" />Matthew Timberlake</a>
+              <a href="/community/matthew_timberlake/index.html"><img src="/images/people/matthew_timberlake.jpg" alt="Matthew Timberlake" />Matthew Timberlake</a>
             </div>
           </article>
         </div>
@@ -55,22 +55,22 @@
           <div class="inner"><h2>Executive Council</h2></div>
           <article class="gallery">
             <div class="card">
-              <a href="/community/daria_loi/index.html"><img src="/images/people/daria_loi.jpg" />Daria Loi</a>
+              <a href="/community/daria_loi/index.html"><img src="/images/people/daria_loi.jpg" alt="Daria Loi" />Daria Loi</a>
             </div>
             <div class="card">
-              <a href="/community/lynne_varner/index.html"><img src="/images/people/lynne_varner.jpg" />Lynne Varner</a>
+              <a href="/community/lynne_varner/index.html"><img src="/images/people/lynne_varner.jpg" alt="Lynne Varner" />Lynne Varner</a>
             </div>
             <div class="card">
-              <a href="/community/trish_dziko/index.html"><img src="/images/people/trish_dziko.jpg" />Trish Dziko</a>
+              <a href="/community/trish_dziko/index.html"><img src="/images/people/trish_dziko.jpg" alt="Trish Dziko" />Trish Dziko</a>
             </div>
             <div class="card">
-              <a href="/community/shashi_jain/index.html"><img src="/images/people/shashi_jain.jpg" />Shashi Jain</a>
+              <a href="/community/shashi_jain/index.html"><img src="/images/people/shashi_jain.jpg" alt="Shashi Jain" />Shashi Jain</a>
             </div>
             <div class="card">
-              <a href="/community/elizabeth_scallon/index.html"><img src="/images/people/elizabeth_scallon.jpg" />Elizabeth Scallon</a>
+              <a href="/community/elizabeth_scallon/index.html"><img src="/images/people/elizabeth_scallon.jpg" alt="Elizabeth Scallon" />Elizabeth Scallon</a>
             </div>
             <div class="card">
-              <a href="/community/sharon_jones/index.html"><img src="/images/people/sharon_jones.jpg" />Sharon Jones</a>
+              <a href="/community/sharon_jones/index.html"><img src="/images/people/sharon_jones.jpg" alt="Sharon Jones" />Sharon Jones</a>
             </div>
           </article>
         </div>
@@ -78,75 +78,78 @@
           <div class="inner"><h2>People/Affiliates</h2></div>
           <article class="gallery">
             <div class="card">
-              <a href="/community/stephen_lee/index.html"><img src="/images/people/stephen_lee.jpg" />Stephen Lee</a>
+              <a href="/community/stephen_lee/index.html"><img src="/images/people/stephen_lee.jpg" alt="Stephen Lee" />Stephen Lee</a>
             </div>
             <div class="card">
-              <a href="/community/marin_vesely/index.html"><img src="/images/people/marin_vesely.jpg" />Marin Vesely</a>
+              <a href="/community/marin_vesely/index.html"><img src="/images/people/marin_vesely.jpg" alt="Marin Vesely" />Marin Vesely</a>
             </div>
             <div class="card">
-              <a href="/community/hilary_tsai/index.html"><img src="/images/people/hilary_tsai.jpg" />Hilart Tsai</a>
+              <a href="/community/hilary_tsai/index.html"><img src="/images/people/hilary_tsai.jpg" alt="Hilart Tsai" />Hilart Tsai</a>
             </div>
             <div class="card">
-              <a href="/community/laura_camila_medina/index.html"><img src="/images/people/laura_camila_medina.jpg" />Laura Camila Medina</a>
+              <a href="/community/laura_camila_medina/index.html"><img src="/images/people/laura_camila_medina.jpg" alt="Laura Camila Medina" />Laura Camila Medina</a>
             </div>
             <div class="card">
-              <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" />Helen Leigh</a>
+              <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" alt="Helen Leigh" />Helen Leigh</a>
             </div>
             <div class="card">
-              <a href="/community/justin_patrizi/index.html"><img src="/images/people/justin_patrizi.png" />Justin Patrizi</a>
+              <a href="/community/justin_patrizi/index.html"><img src="/images/people/justin_patrizi.png" alt="Justin Patrizi" />Justin Patrizi</a>
             </div>
             <div class="card">
-              <a href="/community/francesca_frattaroli/index.html"><img src="/images/people/francesca_frattaroli.png" />Francesca Frattaroli</a>
+              <a href="/community/francesca_frattaroli/index.html"><img src="/images/people/francesca_frattaroli.png" alt="Francesca Frattaroli" />Francesca Frattaroli</a>
             </div>
             <div class="card">
-              <a href="/community/catherine_ross/index.html"><img src="/images/people/catherine_ross.jpg" />Catherine Ross</a>
+              <a href="/community/catherine_ross/index.html"><img src="/images/people/catherine_ross.jpg" alt="Catherine Ross" />Catherine Ross</a>
             </div>
             <div class="card">
-              <a href="/community/lis_charman/index.html"><img src="/images/people/lis_charman.jpg" />Lis Charman</a>
+              <a href="/community/scott_nieradka/index.html"><img src="/images/people/scott_nieradka.jpg" alt="Scott Nieradka" />Scott Nieradka</a>
             </div>
             <div class="card">
-              <a href="/community/alanna_risse/index.html"><img src="/images/people/alanna_risse.jpg" />Alanna Risse</a>
+              <a href="/community/lis_charman/index.html"><img src="/images/people/lis_charman.jpg" alt="Lis Charman" />Lis Charman</a>
             </div>
             <div class="card">
-              <a href="/community/miguel_higgins_moy/index.html"><img src="/images/people/miguel_higgins_moy.jpg" />Miguel Higgins Moy</a>
+              <a href="/community/alanna_risse/index.html"><img src="/images/people/alanna_risse.jpg" alt="Alanna Risse" />Alanna Risse</a>
             </div>
             <div class="card">
-              <a href="/community/alex_hessler/index.html"><img src="/images/people/alex_hessler.jpg" />Alex Hessler</a>
+              <a href="/community/miguel_higgins_moy/index.html"><img src="/images/people/miguel_higgins_moy.jpg" alt="Miguel Higgins Moy" />Miguel Higgins Moy</a>
+            </div>
+            <div class="card">
+              <a href="/community/alex_hessler/index.html"><img src="/images/people/alex_hessler.jpg" alt="Alex Hessler" />Alex Hessler</a>
             </div>
 
             <div class="card">
-              <a href="/community/stephanie_littlebird/index.html"><img src="/images/people/stephanie_littlebird.jpg" />Stephanie Littlebird</a>
+              <a href="/community/stephanie_littlebird/index.html"><img src="/images/people/stephanie_littlebird.jpg" alt="Stephanie Littlebird" />Stephanie Littlebird</a>
             </div>
 
             <div class="card">
-              <a href="/community/michael_heavers/index.html"><img src="/images/people/michael_heavers.jpg" />Michael Heavers</a>
+              <a href="/community/michael_heavers/index.html"><img src="/images/people/michael_heavers.jpg" alt="Michael Heavers" />Michael Heavers</a>
             </div>
             <div class="card">
-              <a href="/community/cindy_cooper/index.html"><img src="/images/people/cindy_cooper.jpg" />Cindy Cooper</a>
+              <a href="/community/cindy_cooper/index.html"><img src="/images/people/cindy_cooper.jpg" alt="Cindy Cooper" />Cindy Cooper</a>
             </div>
             <div class="card">
-              <a href="/community/barbara_beath/index.html"><img src="/images/people/barbara_beath.jpg" />Barbara Beath</a>
+              <a href="/community/barbara_beath/index.html"><img src="/images/people/barbara_beath.jpg" alt="Barbara Beath" />Barbara Beath</a>
             </div>
             <div class="card">
-              <a href="/community/anselm_hook/index.html"><img src="/images/people/anselm_hook.jpg" />Anselm Hook</a>
+              <a href="/community/anselm_hook/index.html"><img src="/images/people/anselm_hook.jpg" alt="Anselm Hook" />Anselm Hook</a>
             </div>
             <div class="card">
-              <a href="/community/bennett_battaile/index.html"><img src="/images/people/bennett_battaile.jpg" />Bennett Battaile</a>
+              <a href="/community/bennett_battaile/index.html"><img src="/images/people/bennett_battaile.jpg" alt="Bennett Battaile" />Bennett Battaile</a>
             </div>
             <div class="card">
-              <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.jpg" />Abby Chroman</a>
+              <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.jpg" alt="Abby Chroman" />Abby Chroman</a>
             </div>
             <div class="card">
               <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
             </div>
             <div class="card">
-              <a href="/community/matthew_sottile/index.html"><img src="/images/people/matthew_sottile.jpg" />Matthew Sottile</a>
+              <a href="/community/matthew_sottile/index.html"><img src="/images/people/matthew_sottile.jpg" alt="Matthew Sottile" />Matthew Sottile</a>
             </div>
             <div class="card">
-              <a href="/community/douglas_hanes/index.html"><img src="/images/people/douglas_hanes.jpg" />Douglas Hanes</a>
+              <a href="/community/douglas_hanes/index.html"><img src="/images/people/douglas_hanes.jpg" alt="Douglas Hanes" />Douglas Hanes</a>
             </div>
             <div class="card">
-              <a href="/community/jamie_sherman/index.html"><img src="/images/people/person-generic.png" />Jamie Sherman</a>
+              <a href="/community/jamie_sherman/index.html"><img src="/images/people/person-generic.png" alt="Jamie Sherman" />Jamie Sherman</a>
             </div>
           </article>
           <article class="gallery sponsors">
