--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -62,6 +62,12 @@
           <p><a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank" class="button">Sign Up Now</a></p>
         </div>
       </section>
+      <!-- <section>
+        <div class="inner">
+          <h3>Instructors and Support</h3>
+          <article class="gallery"></article>
+        </div>
+      </section> -->
     </main>
     <footer>
       <div></div>
