added youtube link to enchanted tech page

--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -40,6 +40,7 @@
           <img src="/images/heros/enchantedtech-lace.png" />
         </figure>
         <div class="inner">
+          <h2>Details</h2>
           <h3 class="caps">Who</h3>
           <p>For students (ages 14 to infinity), educators, artists and anybody who wants to learn to play with materials and electronics to create magical things with craft and technology. Come learn/experiment with an amazing talented and creative community of artists and technologists. You can drop-in and engage as much as you wish.</p>
 
@@ -49,10 +50,13 @@
           <h3 class="caps">What</h3>
           <p>Workshops and Lab Sessions</p>
 
-          <p>Enchanted Tech Festival + Show (participants, families, and Community) TBD</p>
+          <p>Enchanted Tech Festival + Show (participants, families, and Community) August 21, 2021. 3:00pm – 6:00pm</p>
 
           <h3 class="caps">Where</h3>
-          <p>At the new CETI lab at PSU and virtually via streaming and asynchronous work. In FMH Room 218 (1 block form the max and bus mall).</p>
+          <p>
+            At the new <strong>CETI lab at PSU</strong> and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">streaming</a></strong> and asynchronous work. In FMH Room 218 (1 block form the max and bus mall).
+          </p>
+          <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
 
           <h3 class="caps">What will you learn:</h3>
           <p>Through workshops, lab hours, artists’ show and tell, and collaborative design and making, you will learn to integrate electronics and technology simply into fabric and paper, and to rapidly design, customize, and construct exciting physical artifacts and costumes using geometric computation and digital fabrication. Experience PSU’s School of Art and Design’s wonderful labs and learn 3d prining, laser cutting, and sewing. Taught by incredibly talented artists.</p>
