added yt to homepage

--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -64,6 +64,9 @@
           <p>To learn more and sign up, fill out <a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank">this google form</a> or if you have more questions, you can reach us by email: <a href="mailto:hello@ceti.institute?subject=enchantedtech">hello@ceti.institute</a></p>
 
           <p><a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank" class="button">Sign Up Now</a></p>
+
+          <h3 class="caps">Share Your Experience</h3>
+          <p>Have images to share? Tag them with <strong>#cetienchantedtech</strong></p>
         </div>
       </section>
       <!-- <section>
