added more location info

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<h1>CETI</h1>
 										<h2>A Creative and Emergent Technology Institute</h2>
 										<p>CETI offers a vision for an inclusive path of lifelong learning and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
-										<a class="button" href="/newsletter/">Join Our Mailing List</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">YouTube</a>
+										<a class="button" href="/newsletter/">Join Our Mailing List</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?sub_confirmation=1" target="_blank" class="button">Subscribe to Our YouTube</a>
 
 										<!-- <hr>
 										<h2>Latest News</h2>
@@ -77,7 +77,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<h2>Enchanted Tech</h2>
 										<h3>E-Textiles Festival</h3>
 										<p>A Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies.</p>
-										<p><a href="/programs/enchanted-tech" class="button">Find Out More</a></p><br>
+										<p><a href="/programs/enchanted-tech" class="button">Find Out More</a>  &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">YouTube Channel</a></p><br>
 									</div>
 								</section>
 								<section class="orange-light">
