--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -33,7 +33,7 @@
           <h1>Enchanted Tech</h1>
           <h2>E-Textiles Festival</h2>
           <p>Join our Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies.</p>
-          <p><a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank" class="button">Sign Up Now</a></p>
+          <p><a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank" class="button">Sign Up Now</a> &nbsp; <a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
           <br />
         </div>
         <figure>
@@ -54,7 +54,7 @@
 
           <h3 class="caps">Where</h3>
           <p>
-            At the new <strong>CETI lab at PSU</strong> and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">streaming</a></strong> and asynchronous work. In FMH Room 218 (1 block form the max and bus mall).
+            At the new <strong>CETI lab at PSU</strong> in FMH Room 218 (1 block form the max and bus mall) and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">YouTube lve streaming</a></strong> and asynchronous work. The <a href="https://goo.gl/maps/2HLkzs72VTihvnU39" targert="_blank">Fariborz Maseeh Hall (FMH)</a> Building is <strong>on SW Boradway between Hall and Harrison</strong>. You will find room 218 on the second floor.
           </p>
           <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
 
