added more youtube subscribe links

--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
           <div class="inner">
             <h2 class="caps">Join/Support</h2>
             <p>To partner with us and to learn more about or propose collaborations or projects, email us at hello@ceti.institute. We will be happy to set up a conversation and talk.</p>
-            <p><a href="mailto:hello@ceti.institute" class="button">Email us</a> &nbsp; <a href="/newsletter" class="button">Newsletter Signup</a></p>
+            <p><a href="mailto:hello@ceti.institute" class="button">Email us</a> &nbsp; <a class="button" href="/newsletter/">Join Our Mailing List</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?sub_confirmation=1" target="_blank" class="button">Subscribe On YouTube</a></p>
             <!-- <h3>Donate</h3>
             <a href="#" class="button">Check</a> <a href="#" class="button">PayPal</a> <a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" class="button">AmazonSmile</a>
             <p>To choose CETI as your non-profit charity choice in Amazon Smile, click the button above and search for Ceti. We're the first on on the serach results, based in Portland, OR.</p>
