--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section id="intro">
-        <figure><img src="/images/heros/enchantedtechbanner2.png" alt="Enchanted Tech Summer Workshop" /></figure>
+        <figure><img src="/images/heros/enchantedtechbanner3.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="inner">
           <h1>Enchanted Tech</h1>
           <h2>E-Textiles Festival</h2>
@@ -37,7 +37,7 @@
           <br />
         </div>
         <figure>
-          <img src="/images/heros/enchantedtech-lace.png" />
+          <img src="/images/heros/enchantedtech-lace.png" alt="Enchanted Tech Workshop July 28th - August 6th 2021" />
         </figure>
         <div class="inner">
           <h2>Details</h2>
