--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -54,7 +54,7 @@
 
           <h3 class="caps">Where</h3>
           <p>
-            At the new <strong>CETI lab at PSU</strong> in FMH Room 218 (1 block form the max and bus mall) and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">YouTube lve streaming</a></strong> and asynchronous work. The <a href="https://goo.gl/maps/2HLkzs72VTihvnU39" targert="_blank">Fariborz Maseeh Hall (FMH)</a> Building is <strong>on SW Boradway between Hall and Harrison</strong>. You will find room 218 on the second floor.
+            At the new <strong>CETI lab at PSU</strong> in FMH Room 218 (1 block form the max and bus mall) and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">YouTube lve streaming</a></strong> and asynchronous work. The <a href="https://goo.gl/maps/2HLkzs72VTihvnU39" target="_blank">Fariborz Maseeh Hall (FMH)</a> Building is <strong>on SW Boradway between Hall and Harrison</strong>. You will find room 218 on the second floor.
           </p>
           <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
 
