--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -56,7 +56,7 @@
           <p>
             At the new <strong>CETI lab at PSU</strong> in FMH Room 218 (1 block form the max and bus mall) and virtually via <strong><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">YouTube lve streaming</a></strong> and asynchronous work. The <a href="https://goo.gl/maps/2HLkzs72VTihvnU39" target="_blank">Fariborz Maseeh Hall (FMH)</a> Building is <strong>on SW Boradway between Hall and Harrison</strong>. You will find room 218 on the second floor.
           </p>
-          <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
+          <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a> &nbsp;<a class="button" href="https://drive.google.com/file/d/139Oc3xpB3YJaxZafXeMNo7sgzkP73Lga/view?usp=sharing" target="_blank">View Schedule</a></p>
 
           <h3 class="caps">What will you learn:</h3>
           <p>Through workshops, lab hours, artists’ show and tell, and collaborative design and making, you will learn to integrate electronics and technology simply into fabric and paper, and to rapidly design, customize, and construct exciting physical artifacts and costumes using geometric computation and digital fabrication. Experience PSU’s School of Art and Design’s wonderful labs and learn 3d prining, laser cutting, and sewing. Taught by incredibly talented artists.</p>
