added better description

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -50,8 +50,22 @@
         <div class="inner">
           <h1>XRchive</h1>
           <h2>Creating Social Documentary Experiences</h2>
-          <p>XRchive is a social documentary project for communities to tell stories in place and in their voices through interdisciplinary collaboration with a diverse community of artists, technologists, and community partners. Through our XR storytelling tours/apps, we will paint the landscape with videos, sounds, and images focussed on themes of (in)justice, memory, and imagination.</p>
+          <!-- <p>XRchive is a social documentary project for communities to tell stories in place and in their voices through interdisciplinary collaboration with a diverse community of artists, technologists, and community partners. Through our XR storytelling tours/apps, we will paint the landscape with videos, sounds, and images focussed on themes of (in)justice, memory, and imagination.</p>
           <p>Our first prototype series of tours/stories will focus on the theme of migrations and displacements</p>
+
+          <p>XRchive is a series of XR storytelling experiences of migrations and displacement  created in interdisciplinary collaboration with a diverse community of artists, technologists, and community partners, for people to experience as they wander around Portland, unearthing hidden stories and provocations.  </p>  -->
+
+          <p>Through XR experiences, we will infuse the Portland landscape with vivid experiences that challenge and subvert systems and symbols of power, inspiring conversations in place around a reimagined future for Portland. These might include videos, sound bytes, depictions of under-represented characters, hazy memories, and imagined futures, wielding these powerful new technologies as an engine for collective memory and imagination.</p>
+
+          <p>With XR technologies such as augmented reality, combined with the pervasiveness of hand-held devices, it is easier than ever to create community building experiences that are both accessible and educational. There is also limitless potential for interactivity, making such experiences even more engaging.</p>
+
+          <p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. They are:</p>
+
+          <ul>
+            <li>Places, communities, culture, memories, and future vision of the Albina region in N/NE Portland;</li>
+            <li>A virtual memorial/meditation/reflection amongst previously unmarked graves for Chinese immigrant railroad workers in SE Portland.</li>
+          </ul>
+
           <br /><br />
         </div>
       </section>
