added footer info to right side

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -65,7 +65,10 @@
             <li>Places, communities, culture, memories, and future vision of the Albina region in N/NE Portland;</li>
             <li>A virtual memorial/meditation/reflection amongst previously unmarked graves for Chinese immigrant railroad workers in SE Portland.</li>
           </ul>
+          <h3>Check the Invitations below for specific dates and times.</h3>
           <br><br>
+
+          
 
         </div>
         </section>
@@ -97,10 +100,13 @@
               <br /><br />
               <a href="https://www.eventbrite.com/e/xrchive-virtual-creative-brainstorming-session-tickets-198738992677" target="_blank" class="button">RSVP to December 4th</a>
             </p>
+            <br>
+            <p><strong>Register here</strong>  for the project to receive project updates, get access to the project discord channel and start brainstorming!</p>
+            <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register</a>
             </div>
           <div>
             
-              <h3>We invite you...</h3>
+              <h3>We Invite You...</h3>
               <p>We invite you to <strong>join us for a community creative brainstorming session</strong> for XRchive, our collaborative XR storytelling project. Using immersive and interactive technologies, we plan to create experiences, tours and provocations in place around (hi)stories of migrations and displacements, injustice and racism, and future visions of Portland.</p>
               <br>
 
